setup overall layout and basic styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import "normalize.css";
 #root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   min-height: 100vh;
   min-width: 100vw;
   background: rgb(34, 193, 195);
@@ -8,4 +11,29 @@
     rgba(34, 193, 195, 1) 0%,
     rgba(253, 187, 45, 1) 100%
   );
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+h1 {
+  font-size: 6rem;
+}
+
+h3 {
+  font-size: 2.5rem;
+}
+
+p {
+  font-size: 1.5rem;
+  margin: 8px 0px;
+}
+
+.book-info {
+  text-align: center;
+  background-color: #ffffff;
+  border-radius: 8px; /* Rounded corners for the card */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Shadow effect */
+  padding: 20px;
+  width: 300px;
+  height: 250px;
 }
